[package]
name = "edge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
env_logger = "0.10.1"
json = "0.12.4"
log = "0.4.20"
reqwest = "0.11.23"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "mysql", "rust_decimal"] }
tokio = { version = "1.35.0", features = ["full"] }
toml = "0.8.8"
earth = { git = "https://github.com/GhostMinerPlus/earth.git"  }
rust_decimal = "1.33.1"
rand = "0.8.5"
edge_lib = { git = "https://github.com/GhostMinerPlus/edge_lib.git" }
