[project]
name = ""
version = ""
description = ""
authors = [
    {name = "ghostminer", email = "1696415745@qq.com"},
]
dependencies = [
    "logging>=0.4.9.6",
    "tornado>=6.4",
    "mysql-connector-python>=8.2.0",
    "toml>=0.10.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
start = "src/__main__.py"
test = "tests/__main__.py"
